# dealix

./: .aiderignore  .backend-features.json  .dockerignore  .env.exa.example  .env.example  .env.local.example  .env.prod.example  .env.production.example  .env.railway.example  .gitignore  .gitleaks.baseline.json  .gitleaks.toml  .gitleaksignore  .mcp.testsprite.example.json  .trivyignore  .trivyignore.yaml  AGENTS.md  AUTO14_RUNBOOK.md  BUSINESS_BUNDLE.md  CHANGELOG.md  CLAUDE.md  CLIENT_OPS_MAX_RUNBOOK.md  CLIENT_SERVICE_AUTOPILOT_RUNBOOK.md  CLIENT_SERVICE_OS_OFFER.md  CODEOWNERS  COMMERCIAL_IDENTITY.md  DASHBOARD.md  DEALIX_30_DAY_EXECUTION_PLAN.md  DEALIX_ARCHITECTURE_MAP.md  DEALIX_CEO_SYSTEM_INDEX.md  DEALIX_CHEAP_LOCAL_WORKFLOW.md  DEALIX_CODESPACES_QUICKSTART.md  DEALIX_COMPANY_OPERATIONAL_STATE.md  DEALIX_COMPANY_OS_SCORECARD.md  DEALIX_DECISION_RULES.md  DEALIX_DEFINITION_OF_DONE.md  DEALIX_EXECUTION_LEDGER.md  DEALIX_EXECUTION_ROADMAP_FINAL.md  DEALIX_FINAL_REPO_TREE.md  DEALIX_IMPLEMENTATION_AUDIT.md  (+247 more)
.ai/: aider.env.example  litellm_config.example.yaml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
acquisition/: ACQUISITION_MASTER_SYSTEM_AR.md  V5_FILE_INDEX.md  contact_discovery_queue.csv  source_targets.csv
agents/: AGENT_EVALUATION_FRAMEWORK_AR.md  AGENT_MEMORY_AND_CONTEXT_POLICY_AR.md  AGENT_OPERATING_SYSTEM_AR.md  AGENT_ROLES_AND_BOUNDARIES_AR.md  AI_AGENT_RISK_REGISTER_AR.md  HUMAN_APPROVAL_GATE_AR.md
api/: app_factory.py  booking-router.ts  boot.ts  brain-router.ts  command-room-router.ts  main.py  router.ts  tenant_context.py  whatsapp-router.ts
app/: __init__.py
auto_client_acquisition/: runtime_paths.py  whatsapp_safe_send.py
automation-backlog/: AUTOMATION_BACKLOG_SYSTEM_AR.md
billing/: BILLING_AND_USAGE_MODEL_AR.md  STRIPE_INTEGRATION_PLAN_AR.md
billing-ops/: INVOICE_AND_COLLECTION_PLAYBOOK_AR.md  PAYMENT_LINKS_AND_RECEIPTS_AR.md
brand/: DEALIX_VISUAL_IDENTITY_GUIDE.md
cadence/: MONTHLY_SCALE_REVIEW_AR.md  WEEKLY_OPERATING_RHYTHM_AR.md
cli/: sales_strategist.py
client-onboarding/: CLIENT_HANDOFF_CHECKLIST_AR.md  CLIENT_INTAKE_FORM_AR.md  PILOT_ROOM_SETUP_AR.md
client_success/: README.md  client_success_dashboard.md  retention_tracker.csv
company/: .gitignore  README.md  __init__.py  config.py
compliance/: OUTBOUND_AND_DATA_POLICY_AR.md
config/: ad_campaigns_seed.json  agent_prompt_library.json  agent_registry.json  ai_eval_rubrics.json  analytics_events.json  commercial_channels.json  commercial_compliance_gates.json  commercial_draft_distribution.json  commercial_founder_review_rules.json  commercial_launch.json  commercial_metrics.json  commercial_offers.json  commercial_quality_gates.json  commercial_risk_terms.json  commercial_social.json  commercial_verticals.json  crm_pipeline_schema.json  customer_lifecycle_stages.json  demo_scenarios.json  market_intelligence_signals.json  media_social_calendar.json  media_social_metrics_template.json  model_routing_policy.json  operating_memory_schemas.json  profitability_model_schema.json  qms_checklists.json  startup_os_offers.json  token_budgets.json
consolidation/: FINAL_FOUNDER_HANDOFF_AR.md  LAUNCH_DECISION_FRAMEWORK_AR.md  MASTER_MERGE_PLAN_AR.md  MASTER_OPERATING_GUIDE_AR.md
content/: README.md  approved_claims.md  content_calendar.csv  content_ideas.md  content_pipeline_influence.csv  proof_library.md  published_log.csv
control_plane/: __init__.py  action_router.py  approval_router.py  ceo_brief.py  company_state.py  control_tower.py  decision_engine.py  learning_router.py  metrics_collector.py  priority_router.py  risk_alerts.py  risk_engine.py  strategic_decision_engine.py  system_scorecard.py
controlled-preview/: CONTROLLED_PREVIEW_MASTER_PLAN_AR.md  LAUNCH_WEEK_EXECUTION_AR.md  PREVIEW_EXIT_CRITERIA_AR.md
core/: constants.py
customer-success/: CHURN_RISK_PLAYBOOK_AR.md  CUSTOMER_SUCCESS_SYSTEM_AR.md  RETAINER_EXPANSION_PLAYBOOK_AR.md
customers/: README.md
dashboards/: agent_performance.json  growth_dashboard.json  money_dashboard.json  system_health.json  tool_risk.json  trust_dashboard.json
data/: commercial_seed_leads.example.jsonl  moat_metrics_inputs.example.jsonl  profitability_inputs.example.jsonl  prospects.csv.template  prospects.seed.csv  saudi_icp_targets.json  warm_list.csv  warm_list_personalized_drafts.yaml
data-room/: CLIENT_PROOF_LEDGER_TEMPLATE_AR.md  FOUNDER_MEMO_AR.md  METRICS_SNAPSHOT_TEMPLATE_AR.md  ONE_PAGE_COMPANY_BRIEF_AR.md
db/: __init__.py  base.py  models.py  models_commercial_intelligence.py  models_commercial_universe.py  models_company_targeting.py  models_erp.py  models_revenue_events.py  models_subscription.py  rls_policies.py  schema.sql  schema.ts  session.py
dealix/: commercial_command_center.py  commercial_finance.py  commercial_intelligence.py  commercial_persuasion.py  commercial_universe.py  commercial_universe_approval.py  private_ops.py
dealix-builder-api/: .env.example  package-lock.json  package.json
dealix-full-automation-growth-os/: ANTI_BAN_RULES.md  AUTOMATION_POLICY.md  CHANNEL_EXECUTION_OS.md  README.md
dealix-gcc-marketing-os/: FOUNDER_REVIEW_RULES.md  GCC_MARKETING_OS.md  README.md
dealix-marketing-os/: FOUNDER_REVIEW_RULES.md  MARKETING_OS.md  README.md
dealix-ops-private/: README.md
dealix-v2/: README.md  pyproject.toml
dealix_cli/: __init__.py  __main__.py  commands.py
delivery/: CLIENT_ACCEPTANCE_CRITERIA_AR.md  CLIENT_WEEKLY_UPDATE_TEMPLATE_AR.md  CUSTOM_AI_DELIVERY_PLAYBOOK_AR.md  DIAGNOSTIC_DELIVERY_PLAYBOOK_AR.md  EXECUTIVE_OS_DELIVERY_PLAYBOOK_AR.md  PILOT_DELIVERY_PLAYBOOK_AR.md  README.md  qa_score_log.csv
demos/: DEMO_ROOM_BLUEPRINT_AR.md  demo_scenarios.json
deploy/: PRODUCTION_SERVER_LAYOUT.md  SERVER_DEPLOYMENT_CHECKLIST.md
deployment/: DEPLOYMENT_MANIFEST_V10.md  ENVIRONMENT_CONTRACT.md  POST_DEPLOYMENT_SMOKE_TEST_AR.md  PRODUCTION_DEPLOYMENT_RUNBOOK_AR.md  RAILWAY_VERCEL_CHECKLIST_AR.md
docs/: .doc_standard_allowlist.txt  00_MASTER_INDEX.md  01_ALL_SYSTEMS_MAP.md  02_FIRST_7_DAYS_EXECUTION.md  02_FOUNDER_START_HERE.md  (+139 more)
(+11624 files in other folders)
