[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dealix"
version = "3.0.0"
description = "Saudi-first B2B revenue, growth, and compliance engine | محرّك إيرادات ونمو وامتثال للشركات السعودية"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dealix", email = "hello@dealix.me" }]
keywords = ["ai", "agents", "saudi-arabia", "llm", "multi-agent", "fastapi", "revenue", "pdpl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Natural Language :: Arabic",
    "Natural Language :: English",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "tenacity>=9.0.0",
    "anthropic>=0.40.0",
    "openai>=1.54.0",
    "google-generativeai>=0.8.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "motor>=3.6.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "email-validator>=2.2.0",
    "phonenumbers>=8.13.0",
    "python-dateutil>=2.9.0",
    "tzdata>=2025.1",
    "structlog>=24.4.0",
    "langfuse>=2.50.0",
    "hubspot-api-client>=11.0.0",
    "google-api-python-client>=2.150.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "resend>=2.4.0",
    "ummalqura>=1.0.4",
    "numpy>=1.26.0,<3",
    "pyyaml>=6.0.2",
    "qrcode[pil]>=7.4.2,<8",
    "pyotp>=2.9.0,<3",
    "passlib[bcrypt]>=1.7.4,<2",
    "cffi>=1.17.1,<2",
    "python-jose[cryptography]>=3.5.0,<4",
    "slowapi>=0.1.9",
    "psycopg[binary]>=3.2,<4",
    "jinja2>=3.1.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
    "bandit[toml]>=1.7.0",
    "ipython>=8.29.0",
]
observability = [
    "sentry-sdk[fastapi]>=2.19.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "prometheus-client>=0.21.0",
]
security = [
    "pip-audit>=2.7.3",
    "cyclonedx-bom>=5.1.1",
    "detect-secrets>=1.5.0",
    "bandit[toml]>=1.7.0",
]
evals = [
    "jsonschema>=4.23.0",
    "rapidfuzz>=3.10.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
dealix = "cli:app"
ai-company = "cli:app"

[project.urls]
Homepage = "https://dealix.me"
Repository = "https://github.com/VoXc2/dealix"
Documentation = "https://github.com/VoXc2/dealix/tree/main/docs"
Issues = "https://github.com/VoXc2/dealix/issues"

[tool.setuptools.packages.find]
include = ["core*", "auto_client_acquisition*", "autonomous_growth*", "integrations*", "api*", "dashboard*", "db*", "dealix*", "platform_core*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "venv", "build", "dist", "migrations"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "SIM", "RUF"]
ignore = ["E501", "S101", "B008", "RUF001", "RUF002", "RUF003", "E702", "S110", "SIM102", "SIM105", "RUF012", "S301", "B904", "F401", "E701", "E402", "N806", "E741", "S310", "S105", "S112", "RUF059", "B007", "F841", "F821", "C408", "N802", "SIM108", "SIM118", "RUF005", "RUF046", "UP042", "UP035", "UP006", "S108", "E712", "S324", "W291", "B017", "B905", "C416", "RUF022", "RUF034", "S102", "S608", "SIM110", "B011", "B033", "F811", "N818", "RUF007", "SIM103", "B023", "C401", "E722", "N814", "N999", "RUF015", "RUF043", "S311", "S602", "UP036"]

[tool.ruff.lint.per-file-ignores]
# S101  assert  — pytest uses asserts; tests pinky-promise on inputs
# S106  hard-coded passwords — test fixtures only
# S311  random() — non-crypto use in test data generation
# S603  subprocess without shell=True — internal trusted commands
# S607  partial executable path — git/bash/pandoc are PATH-resolved trusted tools
"tests/**/*.py" = ["S101", "S106", "S311", "S603", "S607", "E402", "N806", "S105", "UP035", "N802", "S108", "B017", "E741", "S102", "E701", "B023", "RUF043", "S112"]
"scripts/**/*.py" = ["S101", "S603", "S607", "E701", "E402", "S310", "E741", "S112", "S324", "B007", "S608", "N806", "RUF034", "E722", "N818", "N999", "S105", "S311", "S602"]
# Legacy dealix modules: S310 (urllib.open in internal API clients), N806 (constant-style locals), E741
"dealix/**/*.py" = ["S310", "E741", "N806", "B007", "RUF034", "S105", "S324"]
# api/main.py: E402 already handled via inline noqa; S112 in error-handling paths
"api/main.py" = ["S112", "E402"]
# api files with security-noise in test/demo paths
"api/routers/auth.py" = ["S105"]
"api/security/auth_deps.py" = ["S105", "N814"]
"api/security/oidc.py" = ["S105"]
"api/middleware/tenant_isolation.py" = ["S112", "N818"]
"api/routers/founder_launch_status.py" = ["S112", "S607"]
"api/routers/founder_dashboard.py" = ["S112", "N814"]
"api/routers/founder_beast_command_center.py" = ["S112"]
"api/routers/erp/hr.py" = ["S112"]
"api/routers/proof_to_market.py" = ["S112"]
"api/routers/revenue_os.py" = ["S112"]
"api/routers/autonomous.py" = ["E402"]
"dealix/analytics/posthog_client.py" = ["N801"]
"dealix/business_now/snapshot_builder.py" = ["S603", "S607"]
"dealix/commercial_ops/complete_autonomous_day.py" = ["S603"]
"dealix/commercial_ops/founder_strongest_ops.py" = ["S603"]
"dealix/commercial_ops/full_ops_autopilot.py" = ["S603"]
"dealix/commercial_ops/unified_founder_day.py" = ["S603"]

[tool.bandit]
skips = ["B104", "B110"]
exclude_dirs = ["tests", ".venv", "venv", "migrations", "build", "dist"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["venv", "build", "dist", "db/migrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Hard per-test ceiling: turns an environment-specific hang (e.g. a blocked
    # outbound call in CI) into a fast, deterministic failure instead of stalling
    # the whole suite until the job times out and the run is cancelled.
    "--timeout=120",
    "--timeout-method=thread",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
    "llm: tests that call real LLMs",
]

[tool.coverage.run]
branch = true
source = ["core", "auto_client_acquisition", "autonomous_growth", "integrations", "api"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

