[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dealix"
version = "3.0.0"
description = "Saudi-first B2B revenue, growth, and compliance engine | محرّك إيرادات ونمو وامتثال للشركات السعودية"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dealix", email = "hello@dealix.me" }]
keywords = ["ai", "agents", "saudi-arabia", "llm", "multi-agent", "fastapi", "revenue", "pdpl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Natural Language :: Arabic",
    "Natural Language :: English",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "tenacity>=9.0.0",
    "anthropic>=0.40.0",
    "openai>=1.54.0",
    "google-generativeai>=0.8.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "motor>=3.6.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "defusedxml>=0.7.1,<1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "email-validator>=2.2.0",
    "phonenumbers>=8.13.0",
    "python-dateutil>=2.9.0",
    "tzdata>=2025.1",
    "structlog>=24.4.0",
    "langfuse>=2.50.0",
    "hubspot-api-client>=11.0.0",
    "google-api-python-client>=2.150.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "resend>=2.4.0",
    "ummalqura>=1.0.4",
    "pyyaml>=6.0.2",
    "qrcode[pil]>=7.4.2,<8",
    "pyotp>=2.9.0,<3",
    "passlib[bcrypt]>=1.7.4,<2",
    "cffi>=1.17.1,<2",
    "python-jose[cryptography]>=3.5.0,<4",
    "slowapi>=0.1.9",
    "psycopg[binary]>=3.2,<4",
    "jinja2>=3.1.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3.1",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
    "bandit[toml]>=1.7.0",
    "ipython>=8.29.0",
]
observability = [
    "sentry-sdk[fastapi]>=2.19.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "prometheus-client>=0.21.0",
]
security = [
    "pip-audit>=2.7.3",
    "cyclonedx-bom>=5.1.1",
    "detect-secrets>=1.5.0",
    "bandit[toml]>=1.7.0",
]
evals = [
    "jsonschema>=4.23.0",
    "rapidfuzz>=3.10.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
dealix = "cli:app"
ai-company = "cli:app"

[project.urls]
Homepage = "https://dealix.me"
Repository = "https://github.com/Dealix-sa/dealix"
Documentation = "https://github.com/Dealix-sa/dealix/tree/main/docs"
Issues = "https://github.com/Dealix-sa/dealix/issues"

[tool.setuptools.packages.find]
include = ["core*", "auto_client_acquisition*", "autonomous_growth*", "integrations*", "api*", "dashboard*", "db*", "dealix*", "platform_core*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "venv", "build", "dist", "migrations"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "SIM", "RUF"]
ignore = ["E501", "S101", "B008", "RUF001", "RUF002", "RUF003", "E702", "S110", "SIM102", "SIM105", "RUF012", "S301", "B904", "F401", "E701", "E402", "N806", "E741", "S310", "S105", "S112", "RUF059", "B007", "F841", "F821", "C408", "N802", "SIM108", "SIM118", "RUF005", "RUF046", "UP042", "UP035", "UP006", "S108", "E712", "S324", "W291", "B017", "B905", "C416", "RUF022", "RUF034", "S102", "S608", "SIM110", "B011", "B033", "F811", "N818", "RUF007", "SIM103", "B023", "C401", "E722", "N814", "N999", "RUF015", "RUF043", "S311", "S602", "UP036"]

[tool.ruff.lint.per-file-ignores]
# S101  assert  — pytest uses asserts; tests pinky-promise on inputs
# S106  hard-coded passwords — test fixtures only
# S311  random() — non-crypto use in test data generation
# S603  subprocess without shell=True — internal trusted commands
# S607  partial executable path — git/bash/pandoc are PATH-resolved trusted tools
"tests/**/*.py" = ["S101", "S106", "S311", "S603", "S607"]
"scripts/**/*.py" = ["S101", "S603", "S607"]

[tool.bandit]
skips = ["B104", "B110"]
exclude_dirs = ["tests", ".venv", "venv", "migrations", "build", "dist"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["venv", "build", "dist", "db/migrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Hard per-test ceiling: turns an environment-specific hang (e.g. a blocked
    # outbound call in CI) into a fast, deterministic failure instead of stalling
    # the whole suite until the job times out and the run is cancelled.
    "--timeout=120",
    "--timeout-method=thread",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
    "llm: tests that call real LLMs",
]

[tool.coverage.run]
branch = true
source = ["core", "auto_client_acquisition", "autonomous_growth", "integrations", "api"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
